test-tap/reporters/default.edgecases.v22.log

---tty-stream-chunk-separator
  [35m⚠ Could not parse ast-syntax-error.js for line number selection[39m

  SyntaxError: Unexpected token (3:11)

---tty-stream-chunk-separator
  [1mUncaught exception in ast-syntax-error.js[22m

  ~/test-tap/fixture/report/edgecases/ast-syntax-error.js:3
  const fn = do {
             ^^

  SyntaxError: Unexpected token 'do'

---tty-stream-chunk-separator
  [31m✘ ast-syntax-error.js exited with a non-zero exit code: 1[39m
---tty-stream-chunk-separator
  [31m✘ No tests found in ava-import-no-test-declaration.js[39m
---tty-stream-chunk-separator

  [1mUncaught exception in import-and-use-test-member.js[22m

  [90mimport-and-use-test-member.js:3[39m

   [90m2:[39m                             
  [41m[1m 3: test('pass', t => t.pass());[22m[49m
   [90m4:[39m                             

  TypeError: test is not a function

  [90m› Object.<anonymous> (test-tap/fixture/report/edgecases/import-and-use-test-member.js:3:1)[39m

---tty-stream-chunk-separator
  [31m✘ import-and-use-test-member.js exited with a non-zero exit code: 1[39m
---tty-stream-chunk-separator
  [31m✘ No tests found in no-ava-import.js, make sure to import "ava" at the top of your test file[39m
---tty-stream-chunk-separator
  [31m✘ Line numbers for test.js did not match any tests[39m
---tty-stream-chunk-separator

  [1mUncaught exception in throws.js[22m

  [90mthrows.js:1[39m

  [41m[1m 1: throw new Error('throws');[22m[49m
   [90m2:[39m                           

  Error: throws

  [90m› Object.<anonymous> (test-tap/fixture/report/edgecases/throws.js:1:7)[39m

---tty-stream-chunk-separator
  [31m✘ throws.js exited with a non-zero exit code: 1[39m
---tty-stream-chunk-separator
  [90m─[39m

  [31m3 uncaught exceptions[39m
---tty-stream-chunk-separator
